# plugin-billing

./: .gitignore  Cargo.toml  plugin.toml
.github/workflows/: build.yml
frontend/: README.md  package.json  vite.config.ts
frontend/src/: index.ts  types.ts
frontend/src/components/: BillableWidget.tsx
