[package]
name = "time-tracker-billing-plugin"
version = "0.1.0"
authors = []
license = "MIT"
repository = "https://github.com/bthos/time-tracker-billing-plugin"
edition = "2021"
description = "Billing plugin for Time Tracker"

[lib]
name = "billing_plugin"
crate-type = ["cdylib"]

[dependencies]
# SDK dependency - use git until published to crates.io
# For local development in monorepo, use: time-tracker-plugin-sdk = { path = "../../plugin-sdk" }
time-tracker-plugin-sdk = { git = "https://github.com/bthos/time-tracker-app", tag = "plugin-sdk-v0.2.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
